Fix orders controller methods as well as swagger docs
